# vk-bot

./: config.py  main.py  pyproject.toml
actions/admin/: __init__.py  auth.py
actions/user/: __init__.py  alias.py  default.py  image.py
models/: user.py
models/migrations/models/: 0_20240711230847_init.py  1_20240711231217_rename.py
mylib/: qr.py
protocols/: user.py
repositories/: alias.py  user.py
routers/: user.py
services/: group.py  user.py
services/rules/: id.py  scope.py
utils/: helpers.py
